--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,7 +97,7 @@
                             <br><br>
                             <div class="row  mb84 mt64">
                                 <div class=" col-12 titulli">
-                                    <h1>If you no longer go for a gap that exist<span style="padding-left: 10%;"> you're no longer a racing driver. </span></h1>
+                                    <h1>If you no longer go for a gap that exist<span style="padding-left: 10%;"> you're no longer a great racing driver.  </span></h1>
                                 </div>
 
                             </div>
